fix footer spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -72,7 +72,7 @@ body {
 
 .footer-item li {
   display: inline;
-  padding: 0 60px;
+  padding: 0 30px;
 }
 
 .footer-item li > a{
